<resources>
    <string name="app_name">Sync</string>
    <string name="welcome_message">Erga a taça para o infinito com alegria, pois as horas que se foram são irrecuperáveis; grave tua marca na tela da existência com pinceladas de significado</string>
    <string name="login_now">Faça seu login agora mesmo</string>
    <string name="email">Email</string>
    <string name="email_hint">d.luffy@noble.fun</string>
    <string name="password_hint">Pelo menos 8 caracteres</string>
    <string name="password">Senha</string>
    <string name="password_small">Não compartilhe sua senha, mesmo que seja seu(a) namorado(a) peça. A sua segurança é importante para nós!</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="enter">Entrar</string>
    <string name="see_pass">Visualizar a senha</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_up_welcome">Dê as boas-vindas à jornada infinita. Estamos emocionados por você se juntar a nós. Vamos começar a explorar juntos</string>
    <string name="sign_up_title">Complete seu cadastro</string>
    <string name="name">Nome</string>
    <string name="name_hint">Robin</string>
    <string name="name_small">Pelo menos 2 caracteres. Esse nome NÃO será visível para outros usuários</string>
    <string name="year_hint">2001</string>
    <string name="birth_year">Em qual ano você nasceu?</string>
    <string name="year_small">Você precisa ter nascido pelo menos em</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="other">Outro</string>
    <string name="go_back">Voltar</string>
    <string name="profile">Perfil</string>
    <string name="remove">Remover</string>
    <string name="terms">Ao criar a sua conta, você estará concordando com nossos termos</string>
    <string name="sign_in_google">Entrar com Google</string>
    <string name="your_name">Seu nome</string>
    <string name="nick">Nickname</string>
    <string name="wait">Aguarde...</string>
    <string name="tab_synchronies_title">Sincronias</string>
    <string name="tab_explore_title">Explorar</string>
    <string name="tab_panel_title">Painel</string>
    <string name="generic_error">Oopss... obtivemos um erro. Mas não foi sua culpa</string>
    <string name="upload_avatar_error">Oopss... não conseguimos obter a sua imagem de perfil :(</string>
    <string name="nickname_hint">Miss Sunday</string>
    <string name="nickname_small">Pelo menos 2 caracteres. Esse nome será visível para outros usuários</string>
    <string name="error_credentials">Suas credenciais estão incorretas. Verifique a senha ou se o email está cadastrado</string>
    <string name="web_client_id">407382943479-95m8ds0vli45jnb5d1oiudkal1b34ik2.apps.googleusercontent.com</string>
    <string name="tab_layout_description">Navegação das telas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_float_button_description">Botão de ação geral</string>
    <string name="profile_title">Edite seu perfil</string>
    <string name="bio">Bio</string>
</resources>