<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".view.auth.SignInActivity">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/app_name"
            android:textColor="@color/title"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName" />

        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16sp"
            android:text="@string/login_now"
            android:textColor="@color/title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInTitle" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input"
            android:drawableEnd="@drawable/email_icon"
            android:drawableTint="@color/text"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress|textAutoComplete"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_email" />

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="password"
            android:background="@drawable/input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingVertical="14dp"
            android:paddingStart="16dp"
            android:paddingEnd="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPassword" />

        <ImageButton
            android:id="@+id/buttonPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/see_pass"
            android:src="@drawable/visibility_24"
            app:layout_constraintBottom_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toTopOf="@id/password"
            app:tint="@color/text"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passwordSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_small"
            android:textAlignment="center"
            android:textColor="@color/warning"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordSmall" />

        <Button
            android:id="@+id/signInButton"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/enter"
            app:layout_constraintEnd_toStartOf="@id/signUpButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signInButton"
            app:layout_constraintTop_toTopOf="@id/signInButton" />

        <Button
            android:id="@+id/signInGoogle"
            style="@style/ButtonGoogleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/google_24"
            android:drawablePadding="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>