<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    tools:context=".ui.view.home.ProfileActivity">

    <TextView
        android:id="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/profile_title"
        android:textSize="32sp"
        android:textColor="@color/title"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar"
            android:contentDescription="@string/profile"
            android:layout_width="80dp"
            android:layout_height="80dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_label"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        android:text="@string/your_name"
        app:layout_constraintTop_toTopOf="@id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/name"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/card"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="username"
        android:background="@drawable/input"
        android:drawableTint="@color/text"
        android:hint="@string/your_name"
        android:inputType="textAutoComplete|textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <EditText
        android:id="@+id/nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="username"
        android:background="@drawable/input"
        android:drawableTint="@color/text"
        android:hint="@string/nickname_hint"
        android:inputType="textPersonName|textAutoComplete"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_nick" />

    <TextView
        android:id="@+id/label_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/birth_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nick" />

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/input"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:maxLength="4"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_year" />

    <TextView
        android:id="@+id/bio_label"
        android:text="@string/bio"
        app:layout_constraintTop_toBottomOf="@id/year"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textMultiLine|text|textAutoCorrect"
        android:maxLength="170"
        android:id="@+id/bio"
        android:background="@drawable/input"
        app:layout_constraintTop_toBottomOf="@id/bio_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:paddingHorizontal="16dp"
        android:minHeight="100dp"
         android:paddingVertical="14dp"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>