<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".ui.view.home.HomeActivity">

    <TextView
        android:id="@+id/title"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textColor="@color/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:fontFamily="@font/ubuntu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:layout_width="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:contentDescription="@string/profile"
            android:id="@+id/cardAvatar"
            android:layout_width="36dp"
            android:layout_height="36dp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:contentDescription="@string/tab_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/primary"
        android:layout_marginTop="16dp"
        app:tabGravity="fill"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/danger"
        app:tabIndicatorGravity="bottom"
        app:tabInlineLabel="true"
        app:tabMode="fixed"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabTextAppearance="@style/Theme.Sync"
        app:tabTextColor="@color/text"
        app:tabSelectedTextColor="@color/title"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>